short cut keys, zoom help, add docs, add initial menu bar

--- a/doc/paper/bsh.bib
+++ b/doc/paper/bsh.bib
@@ -64,3 +64,12 @@
   publisher={American Association for the Advancement of Science}
 }
 
+@article{weka,
+  title={WEKA---Experiences with a Java Open-Source Project},
+  author={Bouckaert, Remco R and Frank, Eibe and Hall, Mark A and Holmes, Geoffrey and Pfahringer, Bernhard and Reutemann, Peter and Witten, Ian H},
+  journal={The Journal of Machine Learning Research},
+  volume={9999},
+  pages={2533--2541},
+  year={2010},
+  publisher={JMLR. org}
+}
