--- a/doc/paper/bsh.tex
+++ b/doc/paper/bsh.tex
@@ -12,7 +12,7 @@
 \maketitle
 
 \begin{abstract}
-BEASTShell is a scripting langauge base on BeanShell for scripting BEAST,
+BEASTShell is a scripting langauge based on BeanShell for scripting BEAST,
 a package for Bayesian hierarchical clustering. BEASTStudio is a GUI that 
 supports BEASTShell through a shell environment, variable inspector, editors, 
 online interactive help and a set of commands and graphical components for 
